Fixed indexes collapse animation

--- a/Raven.Studio.Html5/Content/app.css
+++ b/Raven.Studio.Html5/Content/app.css
@@ -7095,9 +7095,6 @@ div.btn-group[data-toggle=buttons-radio] button.active {
   text-decoration: underline;
   font-weight: bold;
 }
-.index-panel {
-  overflow: visible !important;
-}
 .index-dropdown {
   right: 0;
   left: auto;
